syntax = "proto3";

option csharp_namespace = "GhostInTheShell.Servers.Shell";

package server;

service CharacterServer {
	rpc GetCharacterImage (CharacterImageRequest) returns (CharacterImageResponse);
	rpc GetCharacterSize (CharacterSizeRequest) returns (CharacterSizeResponse);
}

message CharacterSizeRequest{
	string CharName = 1;
}
message CharacterSizeResponse{
	bool isOk = 1;
	int32 width = 2;
	int32 height = 3;
}

message CharacterImageRequest {
	string CharName = 1;
	string headLabel = 2;
	string eyeLabel = 3;
	string faceLabel = 4;
}

message CharacterImageResponse {
	bool isOk = 1;
	string message = 2;
	bytes imageBytes = 3;
}
